# whaleflow

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: deploy-backend-ec2.yml  deploy-pages.yml
.husky/: pre-commit
backend/: .env.example  README.md  app.py  backfill.py  db.py  exchange_list.json  ingest.py  init_db.py  metrics.py  pyproject.toml  requirements.txt
frontend/: README.md  package.json  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/app/components/: ExplorerPage.tsx  FeedControlsPanel.tsx  NetworkGraph.tsx  (+2 more)
frontend/src/styles/: theme.css
public/data/: cex_labels.json  datasets.json  dune.sql  dune3.json  exchange_flow_7d_hourly.json  exchange_netflow_by_cex_7d_hourly.json
sql/: agg_exchange_flow_hourly.sql  agg_tier_exchange_edges_24h.sql  agg_tiered_exchange_flow_hourly.sql  agg_whale_exchange_flow_hourly.sql
src/app/: App.tsx
src/app/components/: ExplorerPage.tsx  FeedControlsPanel.tsx  ImpactView.tsx  InfoHover.tsx  InsightCard.tsx  LeftSidebar.tsx  LiveStatusBadge.tsx  MonitorFlowChart.tsx  MonitorInsightCard.tsx  NetworkGraph.tsx  RightSidebar.tsx  TopNavigation.tsx  TransactionFeed.tsx
src/app/data/: addressLabels.ts
src/app/hooks/: useAnalyticsData.ts  useExchangeAnalytics.ts  useExploreModel.ts  useImpactModel.ts  useLiveTransactions.ts  useMonitorModel.ts
src/app/sections/: MonitorSection.tsx
src/app/services/: analyticsData.ts  analyticsSelectors.ts  csv.ts  explorerData.ts  marketData.ts
src/app/types/: analytics.ts
src/styles/: theme.css
(+6 files in other folders)
